--- a/GestordeContactos2.vbproj
+++ b/GestordeContactos2.vbproj
@@ -185,6 +185,12 @@
     <Compile Include="Usuario\Registro.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Usuario\Usuarios.Designer.vb">
+      <DependentUpon>Usuarios.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Usuario\Usuarios.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Inicio\FormReporte.resx">
@@ -216,6 +222,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Usuario\Registro.resx">
       <DependentUpon>Registro.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Usuario\Usuarios.resx">
+      <DependentUpon>Usuarios.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
